recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:5: error: not found: value pas
	while(pas!=0){
              ^Spiral:12: error: not found: value pas
		pas = steps+1
                ^Spiral:14: error: not found: value pas
		spiral(pas, 90, longueur, 5)
                       ^